day5-modular-tf/modules/alb/main.tf
resource "aws_security_group" "lobl" {
  name = "tf-alb-g"
  description = "Allow http https ping"
  vpc_id = var.vpc_id

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = -1
    to_port = -1
    protocol = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_alb" "tf-web" {
  name = "rem-web-tf"
  internal = false
  load_balancer_type = "application"
  security_groups = [aws_security_group.lobl.id]
  subnets = var.public_subnet_ids
}

resource "aws_alb_listener" "http" {
  load_balancer_arn = aws_alb.tf-web.arn
  port = "80"
  protocol = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port = "443"
      protocol = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

resource "aws_alb_listener" "https" {
  load_balancer_arn = aws_alb.tf-web.arn
  port = "443"
  protocol = "HTTPS"
  ssl_policy = "ELBSecurityPolicy-2016-08"
  certificate_arn = var.cert_arn

  default_action {
    type = "forward"
    target_group_arn = var.target_group_arn
  }
}
